# Betomnita

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  TODO.md
cmake/modules/: FindSFML.cmake
src/: Main.cpp  ProjectConfig.hpp.in
src/app/: Application.cpp  Application.hpp  Clock.cpp  Clock.hpp  Debug.cpp  Debug.hpp  Error.cpp  Error.hpp
src/betomnita/: BetomnitaGame.cpp  BetomnitaGame.hpp  Cursor.cpp  Cursor.hpp  MainMenuState.cpp  MainMenuState.hpp
src/betomnita/event/: EventRegistration.hpp
src/betomnita/gameplay/: Building.cpp  Building.hpp  DynamicObstacle.cpp  DynamicObstacle.hpp  GamePlayLogic.cpp  GamePlayLogic.hpp  PhysicalBody.cpp  PhysicalBody.hpp  Projectile.cpp  Projectile.hpp  ProjectilePrototype.cpp  ProjectilePrototype.hpp  Prototype.cpp  Prototype.hpp  PrototypeDict.cpp  PrototypeDict.hpp  StaticObstacle.cpp  StaticObstacle.hpp  Terrain.cpp  Terrain.hpp  Unit.cpp  Unit.hpp  Vehicle.cpp  Vehicle.hpp  VehicleChassis.cpp  VehicleChassis.hpp  VehicleChassisPrototype.cpp  VehicleChassisPrototype.hpp  VehicleGun.cpp  VehicleGun.hpp  VehicleGunPrototype.cpp  VehicleGunPrototype.hpp  World.cpp  World.hpp
src/betomnita/layout/: MainMenuLayout.cpp  MainMenuLayout.hpp  PauseLayout.cpp  PauseLayout.hpp
src/betomnita/resources/: Resources.cpp  Resources.hpp
src/betomnita/state/: GamePlayState.cpp  GamePlayState.hpp  MainMenuState.cpp  MainMenuState.hpp  PauseState.cpp  PauseState.hpp
src/game/: Game.cpp  Game.hpp  GameConsts.cpp  GameConsts.hpp  GenericGame.cpp  GenericGame.hpp  State.cpp  State.hpp  StateMachine.cpp  StateMachine.hpp
src/game/event/: Event.hpp  EventInfo.hpp  Listener.hpp
src/game/graphics/: Polygon.cpp  Polygon.hpp  Primitive.cpp  Primitive.hpp  SVGHelper.cpp  SVGHelper.hpp  Text.cpp  Text.hpp  View.cpp  View.hpp
src/game/state/: State.hpp  StateMachine.hpp
src/game/utils/: AABB.cpp  AABB.hpp  Direction.hpp  Property.hpp  Utils.cpp  Utils.hpp
src/project/: Config.hpp.in
src/resource/: Resource.cpp  Resource.hpp
